// InterviewNow Database Schema
// Use this file at https://dbdiagram.io/d

Table tenants {
  id uuid [pk]
  name text
  plan_tier text [default: 'free']
  created_at timestamp
  updated_at timestamp
}

Table users {
  id uuid [pk, note: 'References auth.users in Supabase']
  tenant_id uuid [ref: > tenants.id]
  role text [default: 'user']
  created_at timestamp
  updated_at timestamp
}

Table companies {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  name text
  about text
  mission text
  vision text
  culture text
  story text
  benefits_data jsonb [note: 'Structured as {description: string, items: string[]}']
  values_data jsonb [note: 'Structured as {description: string, items: string[]}']
  created_at timestamp
  updated_at timestamp
}

Table positions {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  company_id uuid [ref: > companies.id]
  title text
  description text
  role_overview text
  key_responsibilities text
  required_qualifications text
  preferred_qualifications text
  key_competencies_section text
  experience_level text
  department text
  location text
  employment_type text [note: 'Full-Time, Part-Time, Contract, or Internship']
  salary_range text
  application_deadline date
  reference_number text
  travel_requirements text
  work_authorization text
  created_at timestamp
  updated_at timestamp
}

Table candidates {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  company_id uuid [ref: > companies.id, not null, note: 'CASCADE DELETE']
  email text [note: 'unique per tenant']
  phone text
  first_name text [not null]
  last_name text [not null]
  auth_email text
  auth_id uuid [note: 'references auth.users']
  skills text[]
  experience jsonb
  education text
  resume_text text
  resume_analysis jsonb
  resume_url text
  linkedin_url text
  current_title text
  current_company text
  created_at timestamp
  updated_at timestamp
}

Table candidate_profiles {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  candidate_id uuid [ref: > candidates.id]
  pdl_id text
  pdl_likelihood integer
  last_enriched_at timestamp
  first_name text
  last_name text
  middle_name text
  birth_year integer
  gender text
  location_name text
  location_locality text
  location_region text
  location_country text
  location_continent text
  location_street_address text
  location_postal_code text
  location_geo text
  linkedin_id text
  linkedin_url text
  linkedin_username text
  facebook_url text
  facebook_username text
  twitter_url text
  twitter_username text
  github_url text
  github_username text
  job_title text
  job_company_name text
  job_company_industry text
  job_company_size text
  job_start_date text
  job_last_updated text
  job_title_levels text[]
  industry text
  interests text[]
  skills text[]
  countries text[]
  experience jsonb
  education jsonb
  created_at timestamp
  updated_at timestamp
}

Table candidate_tenants {
  candidate_id uuid [ref: > candidates.id, pk]
  tenant_id uuid [ref: > tenants.id, pk]
  status text [default: 'active']
  relationship_type text [default: 'candidate']
  invitation_date timestamp
  last_interaction timestamp
  created_at timestamp
  updated_at timestamp
}

Table competencies {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  name text [note: 'unique per tenant']
  description text
  created_at timestamp
  updated_at timestamp
}

Table position_competencies {
  position_id uuid [ref: > positions.id, pk]
  competency_id uuid [ref: > competencies.id, pk]
  tenant_id uuid [ref: > tenants.id]
  weight integer [note: '0-100']
  created_at timestamp
  updated_at timestamp
}

Table interview_sessions {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  position_id uuid [ref: > positions.id]
  candidate_id uuid [ref: > candidates.id]
  company_id uuid [ref: > companies.id]
  title text
  description text
  scheduled_time timestamp
  start_time timestamp
  end_time timestamp
  status text [note: 'scheduled, in_progress, completed, cancelled']
  video_url text
  webrtc_status text [default: 'pending']
  webrtc_server_url text
  webrtc_session_id text
  webrtc_architecture text
  webrtc_connection_time timestamp
  webrtc_operation_id text
  ice_candidates jsonb
  sdp_offers jsonb
  sdp_answers jsonb
  ai_persona text [default: 'default']
  openai_configuration jsonb [default: '{}']
  avatar_enabled boolean [default: false]
  avatar_session_id varchar(255)
  avatar_provider varchar(50) [default: 'akool']
  created_at timestamp
  updated_at timestamp
}

Table transcript_entries {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  session_id uuid [ref: > interview_sessions.id]
  speaker text
  text text
  timestamp timestamp
  start_ms integer
  actual_start_ms integer
  duration_ms integer
  confidence float [note: '0-1']
  source_architecture text
  created_at timestamp
}

Table video_segments {
  id uuid [pk]
  session_id uuid [ref: > interview_sessions.id]
  segment_url text
  start_ms integer
  end_ms integer
  created_at timestamp
}

Table interview_invitations {
  token text [pk]
  tenant_id uuid [ref: > tenants.id]
  session_id uuid [ref: > interview_sessions.id]
  candidate_id uuid [ref: > candidates.id]
  expires_at timestamp
  status text [note: 'pending, sent, accepted, expired']
  created_at timestamp
  updated_at timestamp
}

Table candidate_assessments {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  session_id uuid [ref: > interview_sessions.id]
  candidate_id uuid [ref: > candidates.id]
  overall_score numeric
  competency_scores jsonb
  summary text
  transcript_analysis jsonb
  created_at timestamp
}

Table notifications {
  id uuid [pk]
  user_id uuid [note: 'references auth.users']
  tenant_id uuid [ref: > tenants.id]
  interview_session_id uuid [ref: > interview_sessions.id]
  type text [note: 'interview_completed, interview_scheduled, interview_cancelled, assessment_ready']
  title text
  message text
  is_read boolean [default: false]
  created_at timestamp
  updated_at timestamp
}

Table tenant_preferences {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  avatar_enabled_default boolean
  avatar_provider varchar(50)
  default_avatar_id varchar(100)
  avatar_monthly_limit integer
  avatar_usage_count integer
  created_at timestamp
  updated_at timestamp
}

Table usage_events {
  id uuid [pk]
  tenant_id uuid [ref: > tenants.id]
  event_type text
  quantity integer [note: 'must be > 0']
  created_at timestamp
} 